Add OAuth endpoint security related tests